--- a/src/org.xtuml.bp.model.compare.test/pom.xml
+++ b/src/org.xtuml.bp.model.compare.test/pom.xml
@@ -12,7 +12,8 @@
 	<groupId>org.xtuml.bp</groupId>
 	<artifactId>org.xtuml.bp.model.compare.test</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>eclipse-test-plugin</packaging>
+	<!-- packaging>eclipse-test-plugin</packaging-->
+	<packaging>eclipse-plugin</packaging>
 
 
 	<build>
@@ -45,7 +46,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!-- plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
@@ -54,7 +55,7 @@
 					<testClass>org.xtuml.bp.model.compare.test.ModelCompareTestSuite</testClass>
 					<argLine>-Xmx1024m -Xms512m -Dorg.eclipse.epp.logging.aeri.ui.skipReports=true -Dfile.encoding=UTF-8</argLine>
 				</configuration>
-			</plugin>
+			</plugin-->
 		</plugins>
 	</build>
 </project>
