--- a/src/org.xtuml.bp.xtext.masl.parent/pom.xml
+++ b/src/org.xtuml.bp.xtext.masl.parent/pom.xml
@@ -20,7 +20,7 @@
 		<module>org.xtuml.bp.xtext.masl.ui</module>
 		<module>org.xtuml.bp.xtext.masl.target</module>
 		<module>org.xtuml.bp.xtext.masl.tests</module>
-		<module>org.xtuml.bp.xtext.masl.ui.tests</module>
+		<!--module>org.xtuml.bp.xtext.masl.ui.tests</module-->
 		<module>org.xtuml.bp.xtext.masl.feature</module>
 		<module>org.xtuml.bp.xtext.masl.updatesite</module>
 	</modules>
